[project]
name = "enecoq-data-fetcher"
dynamic = ["version"]
description = "enecoQ power data fetcher - Fetch power usage, cost, and CO2 emission data from enecoQ web service"
readme = "README.md"
authors = [
    { name = "Shibata, Tats" }
]
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["enecoq", "power", "energy", "data", "fetcher", "cli", "cyberhome"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Utilities",
]
dependencies = [
    "playwright>=1.40.0",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/rewse/enecoq-data-fetcher"
Repository = "https://github.com/rewse/enecoq-data-fetcher"
Issues = "https://github.com/rewse/enecoq-data-fetcher/issues"

[project.scripts]
enecoq-data-fetcher = "enecoq_data_fetcher.cli:main"

[tool.hatch.version]
path = "src/enecoq_data_fetcher/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
